Project-001-Roman-Numerals-Converter/roman_numeral_converter_cfn.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
        CloudFormation Template for Roman Numerals Converter Application. This template creates Python Flask Web Application on Amazon Linux 2 
        (ami-033b95fb8079dc481) EC2 Instance with custom security group allowing http connections on port 80 and SSH connection on port 22. Roman Numerals 
        Converter Application is downloaded from Github repository, then installed on Flask.
  
Parameters:
  KeyName:
    Description: Enter the name of your Key Pair for SSH connection
    Type: AWS::EC2::KeyPair::KeyName
    
Resources:
  SGforHTMLandSSH:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG allows traffic for SSH and HTML # Required
      SecurityGroupIngress:
          - CidrIp: 0.0.0.0/0
            FromPort: 22
            IpProtocol: tcp # Required
            ToPort: 22
          - CidrIp: 0.0.0.0/0
            FromPort: 80
            IpProtocol: tcp # Required
            ToPort: 80
  
  RomanconverterWebServerEC2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-033b95fb8079dc481
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref SGforHTMLandSSH
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
          Fn::Base64: # intrinsic function
             |
           #!/bin/bash
           yum update -y
           yum install python3 -y
           pip3 install flask
           cd /home/ec2-user
           FOLDER="https://raw.githubusercontent.com/BurakKoban/my-portfolio_rep/main/Project-001-Roman-Numerals-Converter"
           wget $FOLDER/app.py
           mkdir templates && cd templates
           wget $FOLDER/templates/index.html
           wget $FOLDER/templates/result.html
           # wget -P templates $FOLDER/templates/index.html
           # wget -P templates $FOLDER/templates/result.html
           cd ..
           python3 app.py


      
  
Outputs:
  WebURL:
    Description: Roman Numerals Converter Application URL
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt RomanconverterWebServerEC2.PublicDnsName
